me faltan aun algunas cosas pero me gusta
